--- a/projects/templates/projects/project.html
+++ b/projects/templates/projects/project.html
@@ -3,6 +3,29 @@
    {% block content %}
    <h3> Project page</h3>
    <hr>
-   <p>Documentation and examples for Bootstrap’s powerful, responsive navigation header, the navbar. Includes support for branding, navigation, and more, including support for our collapse plugin.
-</p>
+   <table>
+       <thead>
+           <tr>
+               <td>ID</td>
+               <td>Title</td>
+               <td>Description</td>
+           </tr>
+        </thead>
+        <tbody>
+            
+             
+            <tr>
+                <td>{{project.id}}</td>
+                <td>{{project.title}}</td>
+                <td>{{project.description}}</td>
+
+            </tr>
+
+            
+            
+            
+        </tbody>
+
+    </table>
+   
 {% endblock content %}
