--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
 
 
 <a href="{% url 'home' %}">Home</a>
-<!-- <a href="/project/3">Project</a> -->
+<a href="{% url 'create-project' %}">Add Project</a>
